--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -13,6 +13,7 @@
       position: sticky;
       top: $mr-file-header-top;
       z-index: 102;
+      height: 56px;
 
       &::before {
         content: '';
